objects/ServiceAgentCopilotEvents__dll.object
<CustomObject>
    <fields>
        <fullName>ActionDuration__c</fullName>
        <label>Action Duration</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ActionDuration</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionId__c</fullName>
        <label>Action ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ActionId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionName__c</fullName>
        <label>Action Name</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ActionName</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Success</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ActionSuccess</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Channel</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationDefinition__c</fullName>
        <label>Conversation Definition</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ConversationDefinition</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationEventLogType__c</fullName>
        <label>Conversation Event Log Type</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ConversationEventLogType</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopilotName__c</fullName>
        <label>Copilot Name</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>CopilotName</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Date</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalLatencyTime__c</fullName>
        <label>External Latency Time</label>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ExternalLatencyTime</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalSessionKey__c</fullName>
        <label>External Session Key</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>ExternalSessionKey</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_uuid__c</fullName>
        <label>KQ_uuid</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <externalName>KQ_uuid</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>KEY_QUALIFIER</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Language</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Message</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Org ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>OrgId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanData__c</fullName>
        <label>Plan Data</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>PlanData</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousEventLogUuid__c</fullName>
        <label>Previous Event Log UUID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>PreviousEventLogUuid</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>Session ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>SessionId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>Topic</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnId__c</fullName>
        <label>Turn ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>TurnId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>UserId</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uuid__c</fullName>
        <label>UUID</label>
        <length>60</length>
        <mktDataLakeFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <externalName>uuid</externalName>
            <isEventDate>false</isEventDate>
            <isInternalOrganization>false</isInternalOrganization>
            <isRecordModified>false</isRecordModified>
            <primaryIndexOrder>1</primaryIndexOrder>
            <usageTag>NONE</usageTag>
        </mktDataLakeFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>